--- a/01-markdown.html
+++ b/01-markdown.html
@@ -100,7 +100,7 @@ you may wish to consult the <a href="http://www.dcc.ac.uk/sites/default/files/do
 <ol>
 <li><p>Add emphasis to the text, where appropriate, using single or double asterisks or single or double underscores. Either type of character works, as long as it is matched on both sides of the emphasized phrase. You may find text phrases that need emphasis such as &ldquo;Not Applicable&rdquo;; the title of the Project; and titles of reports or articles.</p></li>
 
-<li><p>Superscripts and subscripts may be added by surrounding the text with the symbols \^ and ~ , respectively. Find one phrase in the <code>Project Description</code> section in want of a superscript and another, a subscript. Mark these occurrences up accordingly.</p></li>
+<li><p>Superscripts and subscripts may be added by surrounding the text with the symbols ^ and ~ , respectively. Find one phrase in the <code>Project Description</code> section in want of a superscript and another, a subscript. Mark these occurrences up accordingly.</p></li>
 
 <li><p>Find two &ldquo;quoted&rdquo;&rdquo; text blocks in the exercise file and insert the &gt; symbol at the beginning of each to markup these passages as blockquotes.</p></li>
 </ol>
