--- a/01-markdown.html
+++ b/01-markdown.html
@@ -102,7 +102,7 @@ you may wish to consult the <a href="http://www.dcc.ac.uk/sites/default/files/do
 
 <li><p>Superscripts and subscripts may be added by surrounding the text with the symbols ^ and ~ , respectively. Find one phrase in the <code>Project Description</code> section in want of a superscript and another, a subscript. Mark these occurrences up accordingly.</p></li>
 
-<li><p>Find two &ldquo;quoted&rdquo;&rdquo; text blocks in the exercise file and insert the &gt; symbol at the beginning of each to markup these passages as blockquotes.</p></li>
+<li><p>Find two &ldquo;quoted&rdquo; text blocks in the exercise file and insert the &gt; symbol at the beginning of each to markup these passages as blockquotes.</p></li>
 </ol>
 
 <p>The result will display as oddly large text indented from the left. We&rsquo;ll fix the oddly large text with a style sheet in a later lesson.</p>
