--- a/02-modifying-appearance.html
+++ b/02-modifying-appearance.html
@@ -116,7 +116,7 @@ chunks.</p>
 
 <p>We can use inline code chunks to populate information from our data file.<br />
 Add this text under Data Collected: The <code>doaj_seal.csv</code> file currently contains
-<code>r nrow(doaj_seal)</code> reputable open access journals.</p>
+`r nrow(doaj_seal)` reputable open access journals.</p>
 
 <h3>Plots</h3>
 
