--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Reproducible Research Reporting with R and RStudio
 </h1>
 <ul>
 <li>
-<em>Maintainers: Gail Clement, Tom Morrell</em>
+<em>Maintainers: Tom Morrell</em>
 </li>
 <li>
 <em>Lesson Content: Gail Clement, Tom Morrell, Donna Wrublewski, Robert Doiel, Yuvi Panda</em>
