--- a/02-modifying-appearance.html
+++ b/02-modifying-appearance.html
@@ -189,7 +189,7 @@ Previous: <a href="01-markdown.html">Getting Started with Markdown</a> Next: <a 
 </section>
 
 <footer>
-<span>&copy; Lesson Contributors</span>
+<span>&copy; Author Carpentry</span>
 <span><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
 alt="Creative Commons License" style="vertical-align: middle;"
 src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a></span>
