--- a/CONDUCT.html
+++ b/CONDUCT.html
@@ -56,7 +56,7 @@ This Code of Conduct is adapted from the <a href="http://contributor-covenant.or
 </section>
 
 <footer>
-<span>&copy; Lesson Contributors</span>
+<span>&copy; Author Carpentry</span>
 <span><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
 alt="Creative Commons License" style="vertical-align: middle;"
 src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a></span>
