--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -133,7 +133,7 @@ Mail us at <a href="mailto:authorcarpentry@library.caltech.edu">authorcarpentry@
 </section>
 
 <footer>
-<span>&copy; Lesson Contributors</span>
+<span>&copy; Author Carpentry</span>
 <span><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
 alt="Creative Commons License" style="vertical-align: middle;"
 src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a></span>
