--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ You also need to <a href="data.zip">download some files</a> for this workshop. E
 </section>
 
 <footer>
-<span>&copy; Lesson Contributors</span>
+<span>&copy; Author Carpentry</span>
 <span><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
 alt="Creative Commons License" style="vertical-align: middle;"
 src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a></span>
